[package]
name = "taskserv"
version = "0.1.0"
edition = "2021"
authors = ["fecf <d2062cf6@skiff.com>"]
homepage = "https://github.com/fecf/taskserv"

[dependencies]
chrono = "0.4.31"
cron = "0.12.0"
eyre = "0.6.9"
fern = "0.6.2"
humantime = "2.1.0"
log = "0.4.20"
notify = "6.1.1"
scopeguard = "1.2.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_as = "0.0.1"
serde_with = "3.4.0"
sysinfo = "0.29.11"
toml = "0.8.8"
windows-service = { git = "https://github.com/mullvad/windows-service-rs" }

[dependencies.windows]
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_JobObjects",
    "Win32_System_RemoteDesktop",
    "Win32_System_Environment",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
]
